--- a/static.css
+++ b/static.css
@@ -1,5 +1,5 @@
 .one {
-    background-image:url("../Asset/hulu.jpg");
+    background-image:url("./Asset/hulu.jpg");
     background-blend-mode: darken;
     background-size: cover;
     background-position: top;
